crates/ruff_python_parser/tests/snapshots/invalid_syntax@with_items_parenthesized_missing_comma.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/with_items_parenthesized_missing_comma.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..160,
        body: [
            With(
                StmtWith {
                    node_index: NodeIndex(None),
                    range: 0..23,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 6..11,
                            node_index: NodeIndex(None),
                            context_expr: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 6..11,
                                    id: Name("item1"),
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                        WithItem {
                            range: 12..17,
                            node_index: NodeIndex(None),
                            context_expr: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 12..17,
                                    id: Name("item2"),
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 20..23,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 20..23,
                                    },
                                ),
                            },
                        ),
                    ],
                    runtime_type_comment: None,
                    runtime_type_comment_bytes: None,
                    runtime_body: None,
                },
            ),
            With(
                StmtWith {
                    node_index: NodeIndex(None),
                    range: 24..53,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 30..41,
                            node_index: NodeIndex(None),
                            context_expr: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 30..35,
                                    id: Name("item1"),
                                    ctx: Load,
                                },
                            ),
                            optional_vars: Some(
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 39..41,
                                        id: Name("f1"),
                                        ctx: Store,
                                    },
                                ),
                            ),
                        },
                        WithItem {
                            range: 42..47,
                            node_index: NodeIndex(None),
                            context_expr: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 42..47,
                                    id: Name("item2"),
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 50..53,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 50..53,
                                    },
                                ),
                            },
                        ),
                    ],
                    runtime_type_comment: None,
                    runtime_type_comment_bytes: None,
                    runtime_body: None,
                },
            ),
            With(
                StmtWith {
                    node_index: NodeIndex(None),
                    range: 54..91,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 60..65,
                            node_index: NodeIndex(None),
                            context_expr: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 60..65,
                                    id: Name("item1"),
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                        WithItem {
                            range: 67..72,
                            node_index: NodeIndex(None),
                            context_expr: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 67..72,
                                    id: Name("item2"),
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                        WithItem {
                            range: 73..78,
                            node_index: NodeIndex(None),
                            context_expr: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 73..78,
                                    id: Name("item3"),
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                        WithItem {
                            range: 80..85,
                            node_index: NodeIndex(None),
                            context_expr: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 80..85,
                                    id: Name("item4"),
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 88..91,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 88..91,
                                    },
                                ),
                            },
                        ),
                    ],
                    runtime_type_comment: None,
                    runtime_type_comment_bytes: None,
                    runtime_body: None,
                },
            ),
            With(
                StmtWith {
                    node_index: NodeIndex(None),
                    range: 92..135,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 98..103,
                            node_index: NodeIndex(None),
                            context_expr: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 98..103,
                                    id: Name("item1"),
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                        WithItem {
                            range: 105..116,
                            node_index: NodeIndex(None),
                            context_expr: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 105..110,
                                    id: Name("item2"),
                                    ctx: Load,
                                },
                            ),
                            optional_vars: Some(
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 114..116,
                                        id: Name("f1"),
                                        ctx: Store,
                                    },
                                ),
                            ),
                        },
                        WithItem {
                            range: 117..122,
                            node_index: NodeIndex(None),
                            context_expr: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 117..122,
                                    id: Name("item3"),
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                        WithItem {
                            range: 124..129,
                            node_index: NodeIndex(None),
                            context_expr: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 124..129,
                                    id: Name("item4"),
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 132..135,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 132..135,
                                    },
                                ),
                            },
                        ),
                    ],
                    runtime_type_comment: None,
                    runtime_type_comment_bytes: None,
                    runtime_body: None,
                },
            ),
            With(
                StmtWith {
                    node_index: NodeIndex(None),
                    range: 136..159,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 141..154,
                            node_index: NodeIndex(None),
                            context_expr: Tuple(
                                ExprTuple {
                                    node_index: NodeIndex(None),
                                    range: 141..154,
                                    elts: [
                                        Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 142..147,
                                                id: Name("item1"),
                                                ctx: Load,
                                            },
                                        ),
                                        Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 149..154,
                                                id: Name("item2"),
                                                ctx: Load,
                                            },
                                        ),
                                    ],
                                    ctx: Load,
                                    parenthesized: true,
                                    runtime_elts: None,
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 156..159,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 156..159,
                                    },
                                ),
                            },
                        ),
                    ],
                    runtime_type_comment: None,
                    runtime_type_comment_bytes: None,
                    runtime_body: None,
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Errors

  |
1 | with (item1 item2): ...
  |             ^^^^^ Syntax Error: invalid syntax
2 | with (item1 as f1 item2): ...
3 | with (item1, item2 item3, item4): ...
  |


  |
1 | with (item1 item2): ...
2 | with (item1 as f1 item2): ...
  |                   ^^^^^ Syntax Error: invalid syntax
3 | with (item1, item2 item3, item4): ...
4 | with (item1, item2 as f1 item3, item4): ...
  |


  |
1 | with (item1 item2): ...
2 | with (item1 as f1 item2): ...
3 | with (item1, item2 item3, item4): ...
  |                    ^^^^^ Syntax Error: invalid syntax
4 | with (item1, item2 as f1 item3, item4): ...
5 | with (item1, item2: ...
  |


  |
2 | with (item1 as f1 item2): ...
3 | with (item1, item2 item3, item4): ...
4 | with (item1, item2 as f1 item3, item4): ...
  |                          ^^^^^ Syntax Error: invalid syntax
5 | with (item1, item2: ...
  |


  |
3 | with (item1, item2 item3, item4): ...
4 | with (item1, item2 as f1 item3, item4): ...
5 | with (item1, item2: ...
  |                   ^ Syntax Error: invalid syntax
