crates/ruff_python_parser/tests/snapshots/invalid_syntax@yield_after_comma.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/yield_after_comma.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..20,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 0..19,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("f"),
                        range: 4..5,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 5..7,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                        runtime_defaults: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 9..19,
                                value: Tuple(
                                    ExprTuple {
                                        node_index: NodeIndex(None),
                                        range: 9..19,
                                        elts: [
                                            NumberLiteral(
                                                ExprNumberLiteral {
                                                    node_index: NodeIndex(None),
                                                    range: 9..10,
                                                    value: Int(
                                                        1,
                                                    ),
                                                },
                                            ),
                                            Yield(
                                                ExprYield {
                                                    node_index: NodeIndex(None),
                                                    range: 12..19,
                                                    value: Some(
                                                        NumberLiteral(
                                                            ExprNumberLiteral {
                                                                node_index: NodeIndex(None),
                                                                range: 18..19,
                                                                value: Int(
                                                                    1,
                                                                ),
                                                            },
                                                        ),
                                                    ),
                                                },
                                            ),
                                        ],
                                        ctx: Load,
                                        parenthesized: false,
                                        runtime_elts: None,
                                    },
                                ),
                            },
                        ),
                    ],
                    runtime_decorator_list: None,
                    runtime_type_comment: None,
                    runtime_type_comment_bytes: None,
                    runtime_body: None,
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Errors

  |
1 | def f(): 1, yield 1
  |             ^^^^^^^ Syntax Error: Yield expression cannot be used here
